--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission
+       android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+       tools:ignore="ScopedStorage" />
+    <!--  if androidExistNotSave = true -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
     <application
-        android:label="bacakomik_app"
+        android:label="BacaKomik"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
