--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,19 +29,28 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   audioplayers: ^5.2.1
+  auto_height_grid_view: ^1.0.0
   cached_network_image: ^3.3.1
+  cloud_firestore: ^4.14.0
   cupertino_icons: ^1.0.2
   custom_refresh_indicator: ^3.0.0
+  device_info_plus: ^9.1.1
+  dio: ^5.4.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
-  http: ^1.2.0
-  shared_preferences: ^2.2.2
+  google_sign_in: ^6.2.1
+  hydrated_bloc: ^9.1.3
+  permission_handler: ^11.2.0
+  solar_icons: ^0.0.5
 
 dev_dependencies:
   build_runner: ^2.4.8
+  change_app_package_name: ^1.1.0
   flutter_gen_runner: ^5.4.0
   flutter_lints: ^2.0.0
   flutter_test:
@@ -63,8 +72,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/
     - assets/images/
+    - assets/icons/
+    - assets/icons/bold/
+    - assets/icons/outline/
+    - assets/icons/logo/
     - assets/sounds/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
