--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
   hydrated_bloc: ^9.1.3
+  path_provider: ^2.1.2
   permission_handler: ^11.2.0
   solar_icons: ^0.0.5
 
