--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   auto_height_grid_view: ^1.0.0
   cached_network_image: ^3.3.1
   cloud_firestore: ^4.14.0
+  connectivity_plus: ^5.0.2
   cupertino_icons: ^1.0.2
   custom_refresh_indicator: ^3.0.0
   device_info_plus: ^9.1.1
@@ -44,6 +45,7 @@ dependencies:
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
+  grouped_list: ^5.1.2
   hydrated_bloc: ^9.1.3
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
