--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,11 @@ dependencies:
   google_sign_in: ^6.2.1
   grouped_list: ^5.1.2
   hydrated_bloc: ^9.1.3
+  package_info_plus: ^5.0.1
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
   solar_icons: ^0.0.5
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   build_runner: ^2.4.8
