--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_slidable: ^3.0.1
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
