--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
@@ -37,8 +37,12 @@ dependencies:
   custom_refresh_indicator: ^3.0.0
   device_info_plus: ^9.1.1
   dio: ^5.4.0
+  file_picker: ^6.1.1
+  firebase_analytics: ^10.8.5
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
+  firebase_crashlytics: ^3.4.14
+  firebase_messaging: ^14.7.15
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
@@ -49,6 +53,7 @@ dependencies:
   google_sign_in: ^6.2.1
   grouped_list: ^5.1.2
   hydrated_bloc: ^9.1.3
+  image_gallery_saver: ^2.0.3
   package_info_plus: ^5.0.1
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
